--- a/models_1_2_kaggle_submission.ipynb
+++ b/models_1_2_kaggle_submission.ipynb
@@ -136,7 +136,12 @@
     "---\n",
     "\n",
     "**Thank You!**  \n",
-    "Feel free to share feedback or suggestions to improve this notebook.\n"
+    "Feel free to share feedback or suggestions to improve this notebook.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Citation \n",
+    "playground-series-s4e11: https://kaggle.com/competitions/playground-series-s4e11\n"
    ]
   },
   {
